--- a/Resources/administration/src/app/component/base/sw-card/sw-card.less
+++ b/Resources/administration/src/app/component/base/sw-card/sw-card.less
@@ -12,6 +12,7 @@
     max-width: 800px;
     margin: 0 auto 40px auto;
     position: relative;
+    color: @color-gutenberg;
 
     &.sw-card--tabs {
         padding: 0;
