NEXT-260 - Add payment methods, customer groups and shops, add translations

--- a/Resources/administration/src/app/component/base/sw-avatar/sw-avatar.less
+++ b/Resources/administration/src/app/component/base/sw-avatar/sw-avatar.less
@@ -13,6 +13,7 @@
     background-size: cover;
     text-align: center;
     font-weight: 600;
+    text-transform: uppercase;
     color: @sw-avatar-color-initials;
     user-select: none;
 }
