--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -9,7 +9,7 @@
         <template slot="smart-bar-actions">
             {% block sw_product_list_smart_bar_actions %}
                 <sw-button :link="'sw.product.create'" variant="primary">
-                    {{ $tc('sw-product.list.buttonCreateProduct') }}
+                    {{ $tc('sw-product.list.buttonAddProduct') }}
                 </sw-button>
             {% endblock %}
         </template>
