--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
@@ -3,25 +3,23 @@
         <sw-container grid="1fr 1fr" gap="30px">
             {% block sw_customer_base_form_first_salutation_field %}
                 <sw-field type="text"
-                          label="Anrede"
+                          :label="$tc('sw-customer.baseForm.labelSalutation')"
                           name="salutation"
-                          required
                           v-model="customer.salutation">
                 </sw-field>
             {% endblock %}
 
             {% block sw_customer_base_form_first_name_field %}
                 <sw-field type="text"
-                          label="Vorname"
+                          :label="$tc('sw-customer.baseForm.labelFirstName')"
                           name="firstName"
-                          required
                           v-model="customer.firstName">
                 </sw-field>
             {% endblock %}
 
             {% block sw_customer_base_form_last_name_field %}
                 <sw-field type="text"
-                          label="Nachname"
+                          :label="$tc('sw-customer.baseForm.labelLastName')"
                           name="lastName"
                           v-model="customer.lastName">
                 </sw-field>
@@ -29,7 +27,7 @@
 
             {% block sw_customer_base_form_email_field %}
                 <sw-field type="email"
-                          label="Email"
+                          :label="$tc('sw-customer.baseForm.labelEmail')"
                           name="email"
                           v-model="customer.email">
                 </sw-field>
@@ -37,7 +35,7 @@
 
             {% block sw_customer_base_form_phone_field %}
                 <sw-field type="text"
-                          label="Telefonnummer"
+                          :label="$tc('sw-customer.baseForm.labelPhoneNumber')"
                           name="phone"
                           disabled>
                 </sw-field>
@@ -45,33 +43,57 @@
 
             {% block sw_customer_base_form_company_field %}
                 <sw-field type="text"
-                          label="Firma"
+                          :label="$tc('sw-customer.baseForm.labelCompany')"
                           name="company"
                           disabled>
                 </sw-field>
             {% endblock %}
 
             {% block sw_customer_base_form_customer_group_field %}
-                <sw-field type="text"
-                          label="Kundengruppe"
+                <sw-field type="select"
+                          :label="$tc('sw-customer.baseForm.labelCustomerGroup')"
+                          :placeholder="$tc('sw-customer.baseForm.placeholderCustomerGroup')"
                           name="customerGroup"
-                          v-model="customer.group.name"
-                          disabled>
+                          v-model="customer.groupId">
+                    {% block sw_customer_base_form_customer_group_field_options %}
+                        <option slot="options" v-for="customerGroup in customerGroups" :value="customerGroup.id">
+                            {{ customerGroup.name }}
+                        </option>
+                    {% endblock %}
                 </sw-field>
             {% endblock %}
 
             {% block sw_customer_base_form_shop_field %}
-                <sw-field type="text"
-                          label="Shop"
-                          name="shop"
-                          v-model="customer.shop.host"
-                          disabled>
+                <sw-field type="select"
+                          :label="$tc('sw-customer.baseForm.labelApplication')"
+                          :placeholder="$tc('sw-customer.baseForm.placeholderApplication')"
+                          name="customerApplication"
+                          v-model="customer.applicationId">
+                    {% block sw_customer_base_form_shop_field_options %}
+                        <option slot="options" v-for="application in applications" :value="application.id">
+                            {{ application.name }}
+                        </option>
+                    {% endblock %}
+                </sw-field>
+            {% endblock %}
+
+            {% block sw_customer_base_form_payment_method_field %}
+                <sw-field type="select"
+                          :label="$tc('sw-customer.baseForm.labelPaymentMethod')"
+                          :placeholder="$tc('sw-customer.baseForm.placeholderPaymentMethod')"
+                          name="paymentMethod"
+                          v-model="customer.defaultPaymentMethodId">
+                    {% block sw_customer_base_form_payment_method_field_options %}
+                        <option slot="options" v-for="paymentMethod in paymentMethods" :value="paymentMethod.id">
+                            {{ paymentMethod.name }}
+                        </option>
+                    {% endblock %}
                 </sw-field>
             {% endblock %}
 
             {% block sw_customer_base_form_customer_number_field %}
                 <sw-field type="text"
-                          label="Kundennummer"
+                          :label="$tc('sw-customer.baseForm.labelCustomerNumber')"
                           name="number"
                           v-model="customer.number">
                 </sw-field>
@@ -79,7 +101,7 @@
 
             {% block sw_customer_base_form_birthday_field %}
                 <sw-field type="date"
-                          label="Geburtsdatum"
+                          :label="$tc('sw-customer.baseForm.labelBirthday')"
                           name="birthday"
                           v-model="customer.birthday">
                     {% block sw_customer_base_form_birthday_field_icon %}
