--- a/Resources/administration/src/module/sw-customer/page/sw-customer-create/sw-customer-create.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-create/sw-customer-create.html.twig
@@ -1,5 +1,8 @@
 {% block sw_customer_detail_content_tabs %}
     <sw-tabs class="sw-customer-detail-page__tabs">
-        <sw-tabs-item :route="{ name: 'sw.customer.create', params: { id: $route.params.id } }" title="Allgemein">Allgemein</sw-tabs-item>
+        <sw-tabs-item :route="{ name: 'sw.customer.create', params: { id: $route.params.id } }"
+                      :title="$tc('sw-customer.detail.tabGeneral')">
+            {{ $tc('sw-customer.detail.tabGeneral') }}
+        </sw-tabs-item>
     </sw-tabs>
 {% endblock %}
