--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
@@ -3,15 +3,26 @@
         {% block sw_customer_detail_base_transition %}
             <transition name="customer-fade" mode="out-in">
                 {% block sw_customer_detail_base_form_card %}
-                    <sw-card title="Account" v-if="editMode" :isLoading="isLoading" key="edit">
+                    <sw-card :title="$tc('sw-customer.detailBase.labelAccountCard')"
+                             v-if="editMode"
+                             :isLoading="isLoading"
+                             key="edit">
                         {% block sw_customer_detail_base_form %}
-                            <sw-customer-base-form :customer="customer"></sw-customer-base-form>
+                            <sw-customer-base-form :customer="customer"
+                                                   :applications="applications"
+                                                   :customerGroups="customerGroups"
+                                                   :paymentMethods="paymentMethods">
+                            </sw-customer-base-form>
                         {% endblock %}
                     </sw-card>
                 {% endblock %}
 
                 {% block sw_customer_detail_base_info_card %}
-                    <sw-card title="Account" v-else class="sw-customer-detail-base__info" key="view" :isLoading="isLoading">
+                    <sw-card :title="$tc('sw-customer.detailBase.labelAccountCard')"
+                             v-else
+                             class="sw-customer-detail-base__info"
+                             key="view"
+                             :isLoading="isLoading">
                         {% block sw_customer_detail_base_info %}
                             <sw-customer-base-info @activateCustomerEditMode="onActivateCustomerEditMode"
                                                    :customerName="customerName"
