NEXT-260 - Add missing scoped LESS variables

--- a/Resources/administration/src/app/component/base/sw-table/sw-table.less
+++ b/Resources/administration/src/app/component/base/sw-table/sw-table.less
@@ -1,12 +1,14 @@
 @import "~less/variables";
 
+@sw-table-color-border: @color-steam-cloud;
+
 .sw-table {
     display: grid;
     font-size: 14px;
 
     .sw-table__cell {
         padding: 15px;
-        border-bottom: 1px solid @color-steam-cloud;
+        border-bottom: 1px solid @sw-table-color-border;
         font-size: 14px;
     }
 }
