--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
@@ -56,7 +56,7 @@
                           name="customerGroup"
                           v-model="customer.groupId">
                     {% block sw_customer_base_form_customer_group_field_options %}
-                        <option slot="options" v-for="customerGroup in customerGroups" :value="customerGroup.id">
+                        <option slot="options" v-for="customerGroup in customerGroups" :key="customerGroup.id" :value="customerGroup.id">
                             {{ customerGroup.name }}
                         </option>
                     {% endblock %}
@@ -70,7 +70,7 @@
                           name="customerApplication"
                           v-model="customer.applicationId">
                     {% block sw_customer_base_form_shop_field_options %}
-                        <option slot="options" v-for="application in applications" :value="application.id">
+                        <option slot="options" v-for="application in applications" :key="application.id" :value="application.id">
                             {{ application.name }}
                         </option>
                     {% endblock %}
@@ -84,7 +84,7 @@
                           name="paymentMethod"
                           v-model="customer.defaultPaymentMethodId">
                     {% block sw_customer_base_form_payment_method_field_options %}
-                        <option slot="options" v-for="paymentMethod in paymentMethods" :value="paymentMethod.id">
+                        <option slot="options" v-for="paymentMethod in paymentMethods" :key="paymentMethod.id" :value="paymentMethod.id">
                             {{ paymentMethod.name }}
                         </option>
                     {% endblock %}
