--- a/Resources/administration/src/module/sw-customer/page/sw-customer-create/sw-customer-create.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-create/sw-customer-create.html.twig
@@ -1,3 +1,10 @@
+{% block sw_customer_detail_header %}
+    <template slot="smart-bar-header">
+        <h2 v-if="customerName">{{ customerName }}</h2>
+        <h2 v-else>{{ $tc('sw-customer.detail.headlineNewCustomer') }}</h2>
+    </template>
+{% endblock %}
+
 {% block sw_customer_detail_content_tabs %}
     <sw-tabs class="sw-customer-detail-page__tabs">
         <sw-tabs-item :route="{ name: 'sw.customer.create', params: { id: $route.params.id } }"
