--- a/Resources/administration/src/app/component/utils/sw-notifications/sw-notifications.less
+++ b/Resources/administration/src/app/component/utils/sw-notifications/sw-notifications.less
@@ -17,15 +17,19 @@
     }
 }
 
+// Vue.js Transitions
 .sw-notifications-slide-fade-enter-active {
     transition: all @sw-notifications-transition;
 }
 
+// Vue.js Transitions
 .sw-notifications-slide-fade-leave-active {
     transition: all @sw-notifications-transition;
 }
 
-.sw-notifications-slide-fade-enter, .sw-notifications-slide-fade-leave-to {
+// Vue.js Transitions
+.sw-notifications-slide-fade-enter,
+.sw-notifications-slide-fade-leave-to {
     transform: translateX(50px);
     opacity: 0;
 }
