--- a/Resources/administration/src/app/component/grid/sw-grid-column/sw-grid-column.less
+++ b/Resources/administration/src/app/component/grid/sw-grid-column/sw-grid-column.less
@@ -15,11 +15,16 @@
     .sw-field  {
         margin-bottom: 0;
 
-        &.sw-field--checkbox {
+        &.sw-field--checkbox,
+        &.sw-field--radio {
             grid-template-columns: auto;
             align-items: center;
             justify-items: center;
             justify-content: center;
+        }
+
+        .sw-field__radio-group .sw-field__radio-option {
+            margin: 0;
         }
     }
 
