--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
@@ -52,7 +52,7 @@
         {% block sw_customer_base_info_data %}
             <div class="sw-customer-base-info__data">
                 {% block sw_customer_base_info_data_container %}
-                    <sw-container grid="1fr 1fr" gap="30px">
+                    <sw-container grid="50% 50%" gap="30px">
                         {% block sw_customer_base_info_data_table %}
                             <sw-table columns="1fr 1fr">
                                 {% block sw_customer_base_info_data_customer_number %}
