--- a/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -34,10 +34,19 @@
             <sw-card-view slot="content">
                 {% block sw_customer_detail_content_tabs %}
                     <sw-tabs class="sw-customer-detail-page__tabs">
-                        <sw-tabs-item :route="{ name: 'sw.customer.detail.base', params: { id: $route.params.id } }"
-                                      :title="$tc('sw-customer.detail.tabGeneral')">
-                            {{ $tc('sw-customer.detail.tabGeneral') }}
-                        </sw-tabs-item>
+                        {% block sw_customer_detail_content_tab_general %}
+                            <sw-tabs-item :route="{ name: 'sw.customer.detail.base', params: { id: $route.params.id } }"
+                                          :title="$tc('sw-customer.detail.tabGeneral')">
+                                {{ $tc('sw-customer.detail.tabGeneral') }}
+                            </sw-tabs-item>
+                        {% endblock %}
+
+                        {% block sw_customer_detail_content_tab_addresses %}
+                            <sw-tabs-item :route="{ name: 'sw.customer.detail.addresses', params: { id: $route.params.id } }"
+                                          :title="$tc('sw-customer.detail.tabAddresses')">
+                                {{ $tc('sw-customer.detail.tabAddresses') }}
+                            </sw-tabs-item>
+                        {% endblock %}
                     </sw-tabs>
                 {% endblock %}
 
@@ -47,6 +56,7 @@
                                  :applications="applications"
                                  :customerGroups="customerGroups"
                                  :paymentMethods="paymentMethods"
+                                 :countries="countries"
                                  :isLoading="isLoading"
                                  :customerEditMode="customerEditMode"
                                  @activateCustomerEditMode="onActivateCustomerEditMode">
