NEXT-261 - Add custom size support for sw-modal

--- a/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
+++ b/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
@@ -4,6 +4,7 @@
             <div class="sw-modal" :class="modalClasses" @click.prevent="closeModal">
                 {% block sw_modal_dialog %}
                     <div class="sw-modal__dialog"
+                         :style="{ maxWidth: size }"
                          role="dialog"
                          aria-labelledby="modalTitleEl"
                          tabindex="-1"
